recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: '(' expected but '{' found.
	else if {
                ^Tree:18: error: illegal start of simple expression
	}
        ^Tree:23: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:37: error: expected start of definition
	override def run() {
                 ^Tree:41: error: Unmatched closing brace '}' ignored here
}
^